--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 firebase
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
 .DS_STORE
 node_modules
 scripts/flow/*/.flowconfig
