--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 firebase
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map 
+public/dist/
 .DS_STORE
 node_modules
 scripts/flow/*/.flowconfig
