--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Sebastian Mandli",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -23,7 +22,6 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
-    "live-server": "^1.2.1",
     "moment": "2.18.1",
     "node-sass": "^5.0.0",
     "normalize.css": "7.0.0",
@@ -39,13 +37,9 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.13",
-    "@babel/preset-react": "^7.12.13",
-    "babel-cli": "6.24.1"
+    "webpack-dev-server": "2.5.1"
   }
 }
